# rust-immutable-seq

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
src/: digit.rs  finger_tree.rs  lazy.rs  lib.rs  measure.rs  monoid.rs  node.rs  seq.rs  tree23.rs  zero.rs
tests/: lazy.rs  seq.rs  seq_quickcheck.rs
